[project]
name = "wfn-sim"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Jones"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "numpy (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
